# axiom-fund

./: .env.example  .gitignore  README.md  limitations.md  pyproject.toml  strategy_spec.md
data/cache/: lazy_prices_ciks.txt  lazy_prices_ciks_crsp.txt  lazy_prices_ciks_merged.txt  lazy_prices_download.txt  lazy_prices_download_v2.txt  lazy_prices_sections.txt  lazy_prices_sections_v1_archive.txt  lazy_prices_sections_v2_archive.txt  lazy_prices_signal.txt  lazy_prices_universe.txt
data/cache/backtest_full/: run_metadata.txt
data/cache/backtest_full_top1000/: run_metadata.txt
data/cache/backtest_full_top1000_4sig/: run_metadata.txt
data/cache/backtest_full_top1000_no_resmom/: run_metadata.txt
data/cache/diagnostics_ivol_dw/: run_metadata.txt
data/cache/diagnostics_resmom/: run_metadata.txt
data/cache/dsr_v2/: run_metadata.txt
data/cache/holdout_split_analysis/: run_metadata.txt
data/cache/holdout_strict_3sig/: run_metadata.txt
data/cache/inference_v2/: run_metadata.txt
data/cache/lazy_prices_backtest/: summary.txt
data/cache/lazy_prices_backtest_vw/: summary.txt
data/cache/liquidity_audit/: run_metadata.txt
data/cache/qa_v2/: run_metadata.txt
docs/: holdout_test_design.md  holdout_test_results.md  limitations.md  methodology_audit.md  signal_design.md  v2_design.md  v2_diagnostics_findings.md  v2_item6_design.md
scripts/: analyze_backtest.py  apply_costs_to_full_backtest.py  run_full_backtest.py  run_full_backtest_holdout_strict.py  run_full_backtest_no_resmom.py  test_wrds_connection.py
scripts/analysis/: apply_diagnostics_resmom.py  apply_dsr_to_v1.py  apply_dw_to_ivol.py  apply_inference_v2.py  apply_qa_to_ic.py  backtest_lazy_prices.py  compute_lazy_prices_signal.py  ff6_bootstrap_size4.py  ff6_spanning_size4.py  generate_exhibits.py  holdout_split_analysis.py  ic_analysis.py  lazy_prices_significance.py  liquidity_audit.py  prototype_lazy_prices_signal.py  run_attribution.py
scripts/data_acquisition/: build_universe.py  compute_lazy_prices_signal.py  download_10k_corpus.py  download_10k_sample.py  extract_sections.py  fetch_ff6_monthly.py  merge_ciks.py  resolve_ciks.py  resolve_ciks_crsp.py
scripts/exploration/: check_wrds_access.py  explore_compustat.py  explore_crsp_indices.py  explore_crsp_schema.py  explore_delisting.py  investigate_vw_coverage.py  per_quintile_returns.py  prototype_returns_query.py  prototype_universe_query.py  signal_correlation_analysis.py  size_by_lazy_prices_sort.py  size_quintile_by_lazy_prices_sort.py  size_quintile_vw_ew_compare.py  size_tercile_by_lazy_prices_sort.py  smoke_align_lazy_prices.py  test_attribution_smoke.py  test_backtest_cache.py  test_backtest_period_end_to_end.py  test_backtest_period_synthetic.py  test_betas_synthetic.py  test_composite_end_to_end.py  test_composite_synthetic.py  test_cost_application_smoke.py  test_costs_smoke.py  test_covariance_real_data.py  test_covariance_synthetic.py  test_fundamentals_module.py  test_gp_end_to_end.py  test_gp_signal.py  test_ivol_end_to_end.py  test_ivol_signal.py  test_neutral_optimizer_end_to_end.py  test_optimizer_end_to_end.py  test_optimizer_synthetic.py  test_pead_smoke.py  test_period_inputs.py  test_resmom_end_to_end.py  test_resmom_signal.py  test_returns_module.py  test_runner_12mo.py  (+5 more)
src/axiom_fund/: _warnings.py
src/axiom_fund/backtest/: costs.py  (+9 more)
tests/: test_alignment.py  test_backtest_engine.py  test_betas.py  test_composite.py  test_covariance.py  test_edgar.py  test_ff_factors.py  test_forward_returns.py  test_fundamentals.py  test_gross_profitability.py  test_ic_analysis.py  test_idiosyncratic_volatility.py  test_inference.py  test_lazy_prices.py  test_metrics.py  test_optimizer.py  test_quintile_sort.py  test_residual_diagnostics.py  test_residual_momentum.py  test_returns.py  test_section_extractor.py  test_storage.py  test_structural_break.py  test_universe.py
(+23 files in other folders)
