[project]
name = "axiom-fund"
version = "0.1.0"
description = "Systematic U.S. equity market-neutral long/short fund prototype"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "David Davila", email = "daviddavilacorraliza@gmail.com" }
]
license = { text = "MIT" }
dependencies = [
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pyarrow>=23.0.1",
    "python-dotenv>=1.2.2",
    "wrds>=3.1.6",
]

[project.urls]
Repository = "https://github.com/daviddavilad/axiom-fund"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/axiom_fund"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "mypy>=1.20.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.11",
]
